<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navInbox"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/inbox" />
        <item
            android:id="@+id/navNeedResponse"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/need_response" />
        <item
            android:id="@+id/navimportant"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/important" />
        <item
            android:id="@+id/navDraft"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/draf" />
        <item
            android:id="@+id/navTrash"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/trash_box" />

        <item
            android:title="@string/other"
            android:menuCategory="secondary">
            <menu>
                <item
                    android:id="@+id/navDll"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/dll" />
            </menu>
        </item>
    </group>
</menu>
