<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/compose"
        android:orderInCategory="200"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/compose"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete"
        android:orderInCategory="300"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        android:visible="false"
        />
    <item
        android:id="@+id/cancel"
        android:orderInCategory="400"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/cancel"
        app:showAsAction="ifRoom"
        android:visible="false" />
</menu>
